--- a/Final Draft/index.html
+++ b/Final Draft/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>Calendar App</title>
+    <title>Reminder App</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -41,14 +41,20 @@
 
       <input id="eventTitleInput" placeholder="Event Title" />
 
-      <input list="meetingTypes" placeholder = "meeting Type" id="types" onfocus="this.value=''" onchange="this.blur();">
+      <input
+        list="meetingTypes"
+        placeholder="meeting Type"
+        id="types"
+        onfocus="this.value=''"
+        onchange="this.blur();"
+      />
 
       <datalist id="meetingTypes">
-        <option value="online">
-        <option value="live">
-        <option value="personal">
-        <option value="exam">
-        <option value="other">
+        <option value="online"></option>
+        <option value="live"></option>
+        <option value="personal"></option>
+        <option value="exam"></option>
+        <option value="other"></option>
       </datalist>
 
       <input id="eventLocationName" placeholder="Event Location Name" />
